# flights_arrangement

./: 11.pro  Dump20251210.sql  PersonCenter_database.sql  flight_db_20251201.sql  flight_db_flights_batch_001.sql  flight_db_flights_batch_002.sql  flight_db_flights_batch_003.sql  flight_db_flights_batch_006.sql  flight_db_flights_batch_008.sql  flight_management_system.sql  flightdetailwidget.cpp  flightdetailwidget.h  flightdetailwidget.ui  flightitemwidget.cpp  flightitemwidget.h  flightitemwidget.ui  flightmanage.cpp  flightmanage.h  form.cpp  form.h  form.ui  formpwd.h  formpwd.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_resources.qrc  plane_db_conn.sql  planedata.sql  widget.cpp  widget.h  widget.ui
1/: 1.pro  ClickableLabel.cpp  ClickableLabel.h  flightitemwidget.cpp  flightitemwidget.h  flightitemwidget.ui  form.cpp  form.h  form.ui  formpwd.cpp  formpwd.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_resources.qrc  widget.cpp  widget.h  widget.ui
11/: 11.pro  ClickableLabel.cpp  ClickableLabel.h  changeticketwidget.cpp  changeticketwidget.h  changeticketwidget.ui  changeticketwidgetui.ui.autosave  flightdetailwidget.cpp  flightdetailwidget.h  flightitemwidget.cpp  flightitemwidget.h  flightitemwidget.ui  flightmanage.cpp  flightmanage.h  form.cpp  form.h  form.ui  formpwd.cpp  formpwd.h  formpwd.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h  widget.ui
AdminSystem/: adminsystemwidget.cpp  adminsystemwidget.h  adminsystemwidget.ui
FlightManagementSystem/: CMakeLists.txt  database_fix.sql
FlightManagementSystem/modules/authentication/: CMakeLists.txt
FlightManagementSystem/modules/authentication/include/: authmanager.h  loginwidget.h  passwordresetwidget.h  registerwidget.h
FlightManagementSystem/modules/authentication/src/: authmanager.cpp  loginwidget.cpp  passwordresetwidget.cpp  registerwidget.cpp
FlightManagementSystem/modules/authentication/ui/: loginwidget.ui  passwordresetwidget.ui  registerwidget.ui
FlightManagementSystem/modules/common/: CMakeLists.txt
FlightManagementSystem/modules/common/include/: clickablelabel.h  common.h  constants.h  flightinfo.h  utils.h
FlightManagementSystem/modules/common/src/: clickablelabel.cpp  constants.cpp  flightinfo.cpp  utils.cpp
FlightManagementSystem/modules/database/: CMakeLists.txt  database_config_example.ini
FlightManagementSystem/modules/database/include/: databasemanager.h
FlightManagementSystem/modules/database/src/: databasemanager.cpp
FlightManagementSystem/modules/flight/: CMakeLists.txt
FlightManagementSystem/modules/flight/include/: changeticketwidget.h  flightdetailwidget.h  flightitemwidget.h  flightmanage.h  flightmanager.h
FlightManagementSystem/modules/flight/src/: changeticketwidget.cpp  flightdetailwidget.cpp  flightitemwidget.cpp  flightmanage.cpp  flightmanager.cpp
FlightManagementSystem/modules/flight/ui/: .gitkeep  changeticketwidget.ui  flightdetailwidget.ui  flightitemwidget.ui
FlightManagementSystem/modules/user/: CMakeLists.txt
FlightManagementSystem/modules/user/include/: mymsgdialog.h  myorderdialog.h  passengerdialog.h  personcenterwindow.h  pointsdialog.h  profileeditwidget.h  usermanager.h
FlightManagementSystem/modules/user/src/: mymsgdialog.cpp  myorderdialog.cpp  passengerdialog.cpp  personcenterwindow.cpp  pointsdialog.cpp  profileeditwidget.cpp  usermanager.cpp
FlightManagementSystem/modules/user/ui/: mymsgdialog.ui  myorderdialog.ui  passengerdialog.ui  personcenterwindow.ui  pointsdialog.ui  profileeditwidget.ui
FlightManagementSystem/resources/: resources.qrc
FlightManagementSystem/src/: CMakeLists.txt  adminpanel.cpp  adminpanel.h  flightadminpanel.cpp  flightadminpanel.h  flightsearchwidget.cpp  flightsearchwidget.h  flightsearchwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewmanager.cpp  viewmanager.h
IntegratedFlightSystem/: CMakeLists.txt  DATABASE_MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  main.cpp  数据库统一说明.md  整合说明.md
IntegratedFlightSystem/database/: README.md  database_config.example.ini  databasemanager.cpp  databasemanager.h  test_connection.cpp
IntegratedFlightSystem/flight/: flightdetailwidget.cpp  flightdetailwidget.h  flightdetailwidget.ui  flightquerywidget.cpp  flightquerywidget.h  flightquerywidget.ui
IntegratedFlightSystem/login/: ClickableLabel.cpp  ClickableLabel.h  form.cpp  form.h  form.ui  formpwd.cpp  formpwd.h  formpwd.ui  mainwindow.cpp  mainwindow.ui  widget.cpp  widget.h  widget.ui
IntegratedFlightSystem/person/: myorderdialog.cpp  myorderdialog.h  myorderdialog.ui  passengerdialog.cpp  passengerdialog.h  passengerdialog.ui  personcenterwindow.cpp  personcenterwindow.h  personcenterwindow.ui  pointsdialog.cpp  pointsdialog.h  pointsdialog.ui
IntegratedFlightSystem/resources/: resources.qrc
PersonCenter/: CMakeLists.txt  PersonCenterWindow.cpp  PersonCenterWindow.h  PersonCenterWindow.ui  couponwidget.cpp  couponwidget.h  couponwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mymsgdialog.cpp  mymsgdialog.h  mymsgdialog.ui  myorderdialog.cpp  myorderdialog.h  myorderdialog.ui  passengerdialog.cpp  passengerdialog.h  passengerdialog.ui  pointsdialog.cpp  pointsdialog.h  pointsdialog.ui  profileeditwidget.cpp  profileeditwidget.h  profileeditwidget.ui
flightdata/: extract_flights_batch.py  flight_db_flights.sql  flight_response.json  flightdata.csv  flights_regex_extracted.csv  flights_regex_extracted.json  import_to_mysql.py  response101.txt  response104.txt  response105.txt  response106.txt  response107.txt  response109.txt  response110.txt  response111.txt  response112.txt  response114.txt  response115.txt  response12.txt  response17.txt  response21.txt  response22.txt  response23.txt  response24.txt  response25.txt  response26.txt  response28.txt  response30.txt  response32.txt  response33.txt  response34.txt  response37.txt  response38.txt  response39.txt  response48.txt  response50.txt  response54.txt  response55.txt  response6.txt  response60.txt  (+15 more)
flightdetail/: flightdetailwidget.cpp  (+5 more)
(+71 files in other folders)
